--- a/example_config.json
+++ b/example_config.json
@@ -5,5 +5,6 @@
 	"botdevs": ["User Id"],
 	"skyKey": "Dark Sky Api token",
 	"carbon": "Carbon api token",
-	"abal": "bots.pw api token"
+	"abal": "bots.pw api token",
+	"google": "Google geocoding api token"
 }
