--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "discord.js": "^11.1.0",
     "erlpack": "^0.1.2",
     "figlet": "^1.2.0",
-    "geocoder": "^0.2.3",
     "jimp": "^0.2.28",
     "linereader": "^1.1.0",
+    "node-geocoder": "^3.21.0",
     "request": "^2.81.0",
     "right-pad": "^1.0.1",
     "string-argv": "0.0.2",
